--- a/0.1/Dockerfile
+++ b/0.1/Dockerfile
@@ -4,3 +4,6 @@
 
 FROM cm2network/steamcmd:root
 
+# steam is linking software with IDs
+ENV VALHEIMSERVER_APPID 896660
+ENV VALHEIMSERVER_DIR "${HOMEDIR}/valheimserver"
