isntall log output

--- a/0.1/Dockerfile
+++ b/0.1/Dockerfile
@@ -7,3 +7,12 @@ FROM cm2network/steamcmd:root
 # steam is linking software with IDs
 ENV VALHEIMSERVER_APPID 896660
 ENV VALHEIMSERVER_DIR "${HOMEDIR}/valheimserver"
+
+
+RUN set -e; \
+        { \
+            echo 'Valheim Dedicated Server'; \
+            echo 'steam app id = $VALHEIMSERVER_APPID'; \
+            echo 'directory = $VALHEIMSERVER_DIR'; \
+	    } > /var/log/valheim_install
+
