--- a/0.1/Dockerfile
+++ b/0.1/Dockerfile
@@ -16,3 +16,21 @@ RUN set -e; \
             echo 'directory = $VALHEIMSERVER_DIR'; \
 	    } > /var/log/valheim_install
 
+RUN mkdir -p "${STEAMAPPDIR}"
+
+RUN set -ex; \
+	apt-get update; \
+	apt-get install -y --no-install-recommends \
+        wget=1.20.1-1.1 \
+		ca-certificates=20190110 \
+		lib32z1=1:1.2.11.dfsg-1
+
+RUN set -ex; \
+	bash "${STEAMCMDDIR}/steamcmd.sh" +login anonymous \
+                                      +force_install_dir "${VALHEIMSERVER_DIR}" \
+                                      +app_update "${VALHEIMSERVER_APPID}" \
+                                      +quit
+
+
+COPY docker-entrypoint.sh /usr/local/bin/
+ENTRYPOINT ["docker-entrypoint.sh"]
