fixed install prcess

--- a/0.1/Dockerfile
+++ b/0.1/Dockerfile
@@ -11,26 +11,23 @@ ENV VALHEIMSERVER_DIR "${HOMEDIR}/valheimserver"
 
 RUN set -e; \
         { \
-            echo 'Valheim Dedicated Server'; \
-            echo 'steam app id = $VALHEIMSERVER_APPID'; \
-            echo 'directory = $VALHEIMSERVER_DIR'; \
+            echo "Valheim Dedicated Server"; \
+            echo "steam app id = $VALHEIMSERVER_APPID"; \
+            echo "directory = $VALHEIMSERVER_DIR"; \
 	    } > /var/log/valheim_install
 
 RUN mkdir -p "${VALHEIMSERVER_DIR}"
 
-RUN set -ex; \
-	apt-get update; \
-	apt-get install -y --no-install-recommends \
-        wget=1.20.1-1.1 \
-		ca-certificates=20190110 \
-		lib32z1=1:1.2.11.dfsg-1
+RUN chown -R "${USER}:${USER}" "${HOMEDIR}" 
+RUN chown -R "${USER}:${USER}" "${VALHEIMSERVER_DIR}" 
 
-RUN set -ex; \
-	bash "${STEAMCMDDIR}/steamcmd.sh" +login anonymous \
+USER ${USER}
+VOLUME ${VALHEIMSERVER_DIR}
+WORKDIR ${VALHEIMSERVER_DIR}
+
+RUN set -e; \
+    bash "${STEAMCMDDIR}/steamcmd.sh" +login anonymous \
                                       +force_install_dir "${VALHEIMSERVER_DIR}" \
                                       +app_update "${VALHEIMSERVER_APPID}" \
                                       +quit
 
-
-COPY docker-entrypoint.sh /usr/local/bin/
-ENTRYPOINT ["docker-entrypoint.sh"]
